syntax = "proto3";

package guldan;

import "_common.proto";

service Player {
    rpc IsTwoHandUsed(EmptyRequest) returns (BoolResponse);
}